regexml/src/snapshots/regexml__re_compiler__tests__simple_compile.snap
---
source: src/re_compiler.rs
expression: re_program.operation
---
Sequence(
    Sequence {
        operations: [
            Atom(
                Atom {
                    atom: [
                        'a',
                        'b',
                        'c',
                    ],
                    len: 3,
                },
            ),
            EndProgram(
                EndProgram,
            ),
        ],
    },
)
